# mini_blog_api

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
envs/: .env.docker.example  .env.example
migrations/: env.py
migrations/versions/: 7ac0446d4287_init_schema.py  eb9fbc37802a_init_schema_users_posts_comments.py
src/mini_blog_api/: __init__.py  main.py
src/mini_blog_api/core/: database.py  settings.py
src/mini_blog_api/models/: __init__.py  models.py
src/mini_blog_api/routers/: comments.py  posts.py  users.py
src/mini_blog_api/schemas/: __init__.py  comments.py  posts.py  users.py
src/mini_blog_api/services/: __init__.py  comments.py  posts.py  users.py
tests/: conftest.py  pytest.ini  test_comments.py  test_posts.py  test_users.py
