[project]
name = "mini-blog-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic[email] (>=2.12.2,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "passlib (==1.7.4)",
    "bcrypt (==3.2.2)",
    "alembic (>=1.17.0,<2.0.0)"
]

[tool.poetry]
name = "mini-blog-api"
version = "0.1.0"
description = "Mini Blog API (FastAPI + PostgreSQL)"
authors = ["Josias CH <20210614@aloe.ulima.edu.pe>"]
readme = "README.md"

# 👇 esto es lo importante con layout src/
packages = [{ include = "mini_blog_api", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asgi-lifespan (>=2.1.0,<3.0.0)"
]


[tool.pytest.ini_options]
asyncio_mode = "auto"